fix(FieldBlock): ensure extra spacing of labels when on small screens (#3187)
Fixes #3102

FieldBlock label now has the same top-margin on small screens as other input fields.

--- a/packages/dnb-eufemia/src/extensions/forms/FieldBlock/style/dnb-field-block.scss
+++ b/packages/dnb-eufemia/src/extensions/forms/FieldBlock/style/dnb-field-block.scss
@@ -8,6 +8,8 @@ fieldset.dnb-forms-field-block {
 .dnb-forms-field-block {
   &__grid {
     display: grid;
+
+    @include formLabelWrap();
   }
 
   &--layout {
